--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
   <string name="assets_receive_ledger_not_supported_title">Ledger does not support this token</string>
 
   <string name="common_signature_invalid">Signature is invalid</string>
-  <string name="ledger_sign_signature_invalid_message">Please make sure you have selected the right Ledger device for currently approving operation</string>
+  <string name="ledger_sign_signature_invalid_message">Please, make sure you have selected the right Ledger device for currently approving operation</string>
 
   <string name="ledger_sign_tx_not_supported_title">Transaction is not supported</string>
   <string name="ledger_sign_tx_not_supported_subtitle">Ledger does not support this transaction.</string>
@@ -31,19 +31,19 @@
 
   <string name="common_ledger">Ledger</string>
 
-  <string name="ledger_verify_address_subtitle">Press both buttons on your %s to approve the address</string>
+  <string name="ledger_verify_address_subtitle">Press both buttons on your %s to approve address</string>
 
   <string name="ledger_import_select_address_load_more">Load more accounts</string>
   <string name="ledher_import_select_address_title">Select account to add to wallet</string>
 
-  <string name="ledger_error_general_title">Operation failed</string>
+  <string name="ledger_error_general_title">Ledger operation failed</string>
   <string name="ledger_error_general_message">Operation completed with error on device. Please, try again later.</string>
 
   <string name="ledger_error_app_cancelled_title">Operation cancelled</string>
-  <string name="ledger_error_app_cancelled_message">Operation was cancelled by the device. Make sure you unlocked your Ledger with PIN-code.</string>
+  <string name="ledger_error_app_cancelled_message">Operation was cancelled by the device. Make sure you unlocked your Ledger.</string>
 
   <string name="ledger_error_app_not_launched_title">%s app not launched</string>
-  <string name="ledger_error_app_not_launched_message">Open the %s app on your Ledger device </string>
+  <string name="ledger_error_app_not_launched_message">Open the %s app on your Ledger device</string>
 
   <string name="account_ledger_select_device_title">Select your Ledger device</string>
   <string name="account_ledger_select_device_description">Please, enable Bluetooth in your phone settings and Ledger device. Unlock your Ledger device and open the %s app.</string>
