--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="common_no_changes">No changes</string>
+
   <string name="staking_turing_destination_payout">without Yield Boost</string>
   <string name="staking_turing_destination_restake">with Yield Boost</string>
 
