--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+  <string name="common_accept_terms" >Accept terms...</string>
+  <string name="yield_boost_terms">Yield Boost will automatically stake every %s all my transferable tokens above %s</string>
+
+  <string name="yield_boost_stake_increase_time">Stake increase time</string>
   <string name="yiled_boost_yield_boosted">Yield Boosted</string>
 
   <string name="yield_boost_already_enabled_title">Change the Yield Boosted Collator?</string>
@@ -131,7 +135,7 @@
   <string name="account_parity_signer_sign_have_error">I have an error in Parity Signer</string>
 
   <string name="account_parity_signer_sign_title">Sign with Parity Signer</string>
-  
+
   <string name="account_parity_signer_import_preview_title">Here are your accounts</string>
   <string name="account_parity_signer_import_preview_description">Following accounts have been successfully read from Parity Signer</string>
 
@@ -159,7 +163,7 @@
   <string name="account_details_parity_signer_not_supported">Not supported by Parity Signer</string>
   <string name="account_details_parity_signer_alert">This wallet is paired with Parity Signer. Nova will help you to form any operations you want, and you will be requested to sign them using Parity Signer</string>
   <string name="account_parity_signer">Parity Signer</string>
-  
+
   <string name="account_delete_confirmation_description">Make sure you have exported your wallet before proceeding.</string>
   <string name="account_delete_confirmation_title">Forget wallet?</string>
 
@@ -184,7 +188,7 @@
   <string name="account_watch_key_missing_description">Your wallet is watch-only, meaning that you cannot do any operations with it</string>
 
   <string name="account_add_watch_wallet">Add watch-only wallet</string>
-  
+
   <string name="account_enter_wallet_nickname">Enter wallet nickname...</string>
   <string name="accoount_enter_substrate_address">Enter valid substrate address...</string>
   <string name="accoount_enter_evm_address">Evm address must be valid or empty...</string>
